--- a/css/home-style.css
+++ b/css/home-style.css
@@ -19,7 +19,7 @@ body {
   scroll-behavior: smooth;
   cursor: grab;
   gap: 15px;
-  height: calc(100vh - 3rem);
+  height: 100vh;
   width: 100%;
   max-width: 600px;
   background-image: url(../img/main-wallpaper.jpg);
@@ -33,27 +33,11 @@ body {
 
 .container {
   min-width: 100%;
-  height: calc(100vh - 3rem);
-  background-color: rgba(255, 255, 255, 0.03);
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(2px);
   color: white;
   user-select: none; /* !Prevents text selection while dragging */
-}
-
-#navigation-bar {
-  width: 100%;
-  max-width: 600px;
-  height: 3rem; /*! DO NOT CHANGE THE VALUE */
-  background-color: rgb(0, 0, 0);
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-#navigation-bar a {
-  padding: 0.6rem 2.5rem;
-}
-#navigation-bar a i {
-  font-size: 1.5rem;
-  color: #fff;
 }
 
 /* ?======================over all template====================== */
@@ -68,10 +52,11 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 .search-bar {
-  grid-row: 1 / 2;
+  grid-row: 1 / 3;
   grid-column: 1 / 5;
-  background-color: rgb(255, 255, 255);
-  margin: 0.7rem 0.5rem 0 0.5rem;
+  height: 3.5rem;
+  background-color: rgb(0, 0, 0);
+  margin: 2.5rem 0.5rem 0 0.5rem;
   border-radius: 50px;
 
   display: flex;
@@ -115,7 +100,8 @@ body {
 
 .datetime {
   color: #fff;
-  background-color: rgba(255, 255, 255, 0.1);
+  border: 0.5px solid #fff;
+  background-color: rgba(255, 255, 255, 0.11);
   backdrop-filter: blur(10px);
   text-align: center;
   padding: 0.7rem 1.5rem 0.3rem;
@@ -138,6 +124,7 @@ body {
 .time span:last-child {
   font-size: 1.2rem;
   background-color: rgba(255, 255, 255, 0.3);
+  border: 0.5px solid #fff;
   color: #ffffff;
   padding: 0.1rem 0.05rem 0.1rem 0.2rem;
   border-radius: 0.1rem;
