--- a/css/home-style.css
+++ b/css/home-style.css
@@ -19,7 +19,7 @@ body {
   scroll-behavior: smooth;
   cursor: grab;
   gap: 15px;
-  height: 100vh;
+  height: calc(100vh - 2rem);
   width: 100%;
   max-width: 600px;
   background-image: url(../img/main-wallpaper.jpg);
@@ -33,7 +33,7 @@ body {
 
 .container {
   min-width: 100%;
-  height: 100vh;
+  height: calc(100vh - 2rem);
   background-color: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(2px);
   color: white;
@@ -56,7 +56,7 @@ body {
   grid-column: 1 / 5;
   height: 3.5rem;
   background-color: rgb(0, 0, 0);
-  margin: 2.5rem 0.5rem 0 0.5rem;
+  margin: 0.7rem 0.5rem 0 0.5rem;
   border-radius: 50px;
 
   display: flex;
