--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin-top: -2.3rem;
 }
 #navigation-bar a {
   padding: 0.6rem 2.5rem;
