music player 3/4 there

--- a/css/musicPlayer.css
+++ b/css/musicPlayer.css
@@ -12,10 +12,11 @@ body {
   height: 100vh;
 }
 .wrapper {
+  position: relative;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   background: linear-gradient(#ec5d8d 0%, #fca6a0 70%);
-  /* background-color: #e6c2c2; */
   box-shadow: 0px 6px 15px #515c6f;
 }
 .wrapper i {
@@ -23,7 +24,9 @@ body {
 }
 .top-bar,
 .progress-area .timer,
-.controls {
+.controls,
+.music-list .header,
+.music-list li {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -70,7 +73,7 @@ body {
   text-shadow: 0px 6px 12px #515c6f;
 }
 .progress-area {
-  height: 0.5rem;
+  height: 0.2rem;
   width: 80%;
   margin: 0 auto;
   background-color: rgb(0, 0, 0);
@@ -79,8 +82,8 @@ body {
 }
 .progress-area .progress-bar {
   position: relative;
-  height: inherit;
-  width: 50%;
+  height: 0.2rem;
+  width: 12%;
   border-radius: 50px;
   background: linear-gradient(90deg, #ec5d8d 0%, #f44d52 100%);
 }
@@ -93,7 +96,7 @@ body {
   width: 0.9rem;
   right: -0.5rem;
   border-radius: 50px;
-  background-color: inherit;
+  background-color: #ec5d8d;
   opacity: 0;
   transition: opacity 0.2s ease;
 }
@@ -136,4 +139,69 @@ body {
   line-height: 2.5rem;
   border-radius: inherit;
   background-color: rgb(255, 255, 255);
+}
+
+/* =============================================
+================================================
+============================================= */
+
+.music-list {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  box-sizing: border-box;
+  padding: 1rem 1rem 0;
+  background-color: #471d96;
+  border-radius: 1rem 1rem 0 0;
+
+  bottom: -70%;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.5s ease;
+}
+/*?we will use this to show the playlist (classname: show)*/
+.music-list.show {
+  bottom: 2.3rem;
+  opacity: 1;
+  pointer-events: auto;
+}
+/*?we will use this to show the playlist (classname: show)*/
+.music-list .header {
+  font-size: 1.5rem;
+  color: #515c6f;
+  margin-bottom: 1.5rem;
+}
+.header .row i {
+  cursor: default;
+  margin-right: 0.5rem;
+}
+.header #close {
+  font-size: 2rem;
+  color: #515c6f;
+}
+.music-list .ul {
+  max-height: 30rem;
+  overflow-y: auto;
+}
+.music-list .ul::-webkit-scrollbar {
+  width: 0px;
+}
+.music-list .ul li {
+  cursor: pointer;
+  list-style: none;
+  margin-bottom: 0.5rem;
+  border-bottom: 1px solid #000000;
+}
+.music-list .ul li:last-child {
+  border-bottom: 0px;
+}
+.music-list .ul li .row span {
+  font-size: 1rem;
+}
+.ul li .row p {
+  opacity: 0.8;
+  margin: 0.5rem 0;
+}
+.ul li .audio-duration {
+  font-size: 1rem;
 }
