--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -4,7 +4,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #fff;
 }
 .fa-battery-three-quarters {
   font-size: 1.5rem;
+  color: #d6d6d6;
 }
